# MAGE

./: CMakeLists.txt  README.md
src/: cartridge.c  cartridge.h  cpu.c  cpu.h  execute.c  gameboy.c  gameboy.h  input.c  instructions.c  instructions.h  interrupts.c  interrupts.h  lcd.c  logging.c  logging.h  main.c  mem_handler.c  memory_handler.h  mmu.c  mmu.h  timer.c  video.c  video.h
src/control_server/: client.c  client.h  control_server.py  protocol
src/cpu/: cpu.c  cpu.h  execute.c  instructions.c  instructions.h  interrupts.c  interrupts.h  timer.c  timer.h
src/input/: input.c  input.h  input_controller.h  input_controller_impl.c  input_device.c  input_device.h  input_strategy.h  remote_input.c  remote_input.h  sdl_input.c  sdl_input.h
src/memory/: memory_handler.h  mmu.c  mmu.h
src/video/: ascii_display.c  ascii_display.h  display.h  iterator.c  iterator.h  lcd.c  ppu.c  ppu.h  sdl_display.c  sdl_display.h  video.c  video.h
tests/: CMakeLists.txt  cb_instructions_test.c  cpu_tests.c
tests/driver/: CMakeLists.txt  LinkerScript.ld  test_driver.c  testing.h
